enhance: JCEF replaces WebViewKo; WebView is separated into WebFrame composable & WebEngine class